--- a/main.html
+++ b/main.html
@@ -3,89 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Library Management</title>
+    <title>main</title>
+
     <style>
-        /* Add your CSS styles here */
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f4f4f4;
+        #bigdabba{
+            display: flexbox;
         }
-
-        .navbar {
-            background-color: #3498db;
-            color: #fff;
-            padding: 10px;
-        }
-
-        .container {
-            width: 80%;
-            margin: 0 auto;
-            padding: 20px;
-        }
-
-        .content {
-            background-color: #fff;
-            padding: 20px;
-            margin: 20px 0;
-        }
-
-        .footer {
-            background-color: #3498db;
-            color: #fff;
-            padding: 10px;
-            text-align: center;
-        }
-
-        table {
-            border-collapse: collapse;
-            width: 100%;
-        }
-
-        th, td {
-            border: 1px solid #ddd;
-            padding: 8px;
-            text-align: left;
-        }
-
-        tr:nth-child(even) {
-            background-color: #f2f2f2;
-        }
-
-        /* Navigation menu styles */
-        .menu {
-            background-color: #3498db;
-            color: #fff;
-            padding: 10px;
-            text-align: center;
-        }
-
-        .menu a {
-            color: #fff;
-            margin: 10px;
+        a{
             text-decoration: none;
+            color: black;
         }
     </style>
 </head>
 <body>
-    <div class="navbar">
-        <h1>Library Management</h1>
-    </div>
+    <CENter><h1>MAIN PAGE</h1></CENter>
+    <DIV id="bigdabba">
+        <DIV><a href="home.html">HOME</a></DIV>
+        <div>Delivery</div>
+        <div>about us</div>
+        <div>contact us</div>
+    </DIV>
 
-    <div class="menu">
-        <a href="addbook.html">Add Book</a>
-        <a href="#">Update Book</a>
-        <a href="#">Delete Book</a>
-    </div>
 
-    <div class="content">
-        <h2>Welcome to Library Management System</h2>
-        <p>This is the place where you can manage your library resources efficiently.</p>
-    </div>
+    <a href="home.html"><img src="down.jpg" alt="" srcset=""></a>
+    <img src="top.jpg" alt="" srcset="">
 
-    <div class="footer">
-        &copy; 2023 Library Management System
-    </div>
 </body>
 </html>
